--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="content-wrapper" data-contents-cards-container>
-                <div class="card" data-contents-card>
+                <div class="card">
                     <h2>Wedding Ceremony 1</h2>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-1.html" target="_blank" rel="noopener">
@@ -110,6 +110,9 @@
                             Open this content
                         </a>
                     </p>
+                </div>
+                <div class="no-card">
+                    <p>There is no such a content.</p>
                 </div>
             </div>
 
