--- a/index.html
+++ b/index.html
@@ -65,49 +65,103 @@
             <div class="content-wrapper" data-contents-cards-container>
                 <div class="card">
                     <h2>Wedding Ceremony 1</h2>
+                    <h2>திருமண விழா 1</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-1.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
                 <div class="card">
                     <h2>Wedding Ceremony 2</h2>
+                    <h2>திருமண விழா 2</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-2.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
                 <div class="card">
                     <h2>Wedding Ceremony 3</h2>
+                    <h2>திருமண விழா 3</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-3.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
                 <div class="card">
                     <h2>Wedding Ceremony 4</h2>
+                    <h2>திருமண விழா 4</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-1.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
                 <div class="card">
                     <h2>Wedding Ceremony 5</h2>
+                    <h2>திருமண விழா 5</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-2.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
                 <div class="card">
                     <h2>Wedding Ceremony 6</h2>
+                    <h2>திருமண விழா 6</h2>
+                    <p>
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html" target="_blank" rel="noopener">
+                            Tamil
+                        </a>
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html" target="_blank" rel="noopener">
+                            English
+                        </a>
+                    </p>
                     <p>
                         <a href="vendors/sermons/wedding-ceremony-both-lang-3.html" target="_blank" rel="noopener">
-                            Open this content
+                            Both
                         </a>
                     </p>
                 </div>
