--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                     <h2>Wedding Ceremony 1</h2>
                     <h3>திருமண விழா 1</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-1.html">
                             Both
                         </a>
                     </p>
@@ -84,15 +84,15 @@
                     <h2>Wedding Ceremony 2</h2>
                     <h3>திருமண விழா 2</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-2.html">
                             Both
                         </a>
                     </p>
@@ -101,15 +101,15 @@
                     <h2>Wedding Ceremony 3</h2>
                     <h3>திருமண விழா 3</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-3.html">
                             Both
                         </a>
                     </p>
@@ -118,15 +118,15 @@
                     <h2>Wedding Ceremony 4</h2>
                     <h3>திருமண விழா 4</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-1.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-1.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-1.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-1.html">
                             Both
                         </a>
                     </p>
@@ -135,15 +135,15 @@
                     <h2>Wedding Ceremony 5</h2>
                     <h3>திருமண விழா 5</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-2.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-2.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-2.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-2.html">
                             Both
                         </a>
                     </p>
@@ -152,15 +152,15 @@
                     <h2>Wedding Ceremony 6</h2>
                     <h3>திருமண விழா 6</h3>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-tamil-lang-3.html">
                             Tamil
                         </a>
-                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-en-lang-3.html">
                             English
                         </a>
                     </p>
                     <p>
-                        <a href="vendors/sermons/wedding-ceremony-both-lang-3.html" target="_blank" rel="noopener">
+                        <a href="vendors/sermons/wedding-ceremony-both-lang-3.html">
                             Both
                         </a>
                     </p>
